--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/bacon-rings.html">Delicious Bacon Rings</a></li>
+            <li><a href="./recipes/cape-malay-curry">Savoury Cape Malay Curry</a></li>
+            <li><a href="./recipes/malva-pudding.html">Sweet Malva Puuding</a></li>
+        </ul>
 
 
     </body>
