--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="https://images.halaal.recipes/05-09-17/1430317291MXt1x320.jpg">
         </li>
     </ul>
-    <p>These are my pics for the theme <strong>South Africa</strong>.</p>
+    <p>These are my picks for the theme <strong>South Africa</strong>.</p>
     <p>Try them and enjoy!!</p>
 
 
