--- a/recipes/malva-pudding.html
+++ b/recipes/malva-pudding.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Malva Pudding Recipe</title>
-    </head>
 
-    <body>
-        <h1>Sweet Malva Pudding</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Malva Pudding Recipe</title>
+</head>
+
+<body>
+    <h1>Sweet Malva Pudding</h1>
+    <img src="https://images.halaal.recipes/05-09-17/1430317291MXt1x320.jpg">
+
+</body>
 
 
 </html>
