Iteration 3-step 3: Added ingredients heading and unordered list of ingredients for all pages.

--- a/recipes/bacon-rings.html
+++ b/recipes/bacon-rings.html
@@ -14,6 +14,14 @@
         rings. A twist on the traditional onion where we replace the breadcrumbs with juicy streaky bacon. A perfect snack to get those taste buds going.</p>
     <p>It may not be a South African invention, but it's still staple of the
         nation nonetheless, and here's how you make it:</p>
+    <h2>Ingredients</h2>
+    <ul>
+       <li>1 large yellow onion</li>
+       <li>12 strips bacon</li>
+       <li>1/4 cup brown sugar</li>
+       <li>1/2 tsp. cayenne pepper</li>
+       <li>Sauce of your choice</li>
+    </ul>
 
 </body>
 
