--- a/recipes/cape-malay-curry.html
+++ b/recipes/cape-malay-curry.html
@@ -14,6 +14,27 @@
         traditionally eaten without utensils (try using your hands – it’s fun!). This is a Proudly South African meal,
         hailing from the Southern-most tip of the country.</p>
     <p>Being so savoury and spicy, it would be a crime not to try out this meal. All you need is:</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 kg chicken pieces (mix of thighs & drumsticks, skin on)</li>
+      <li>250 g white onion (sliced)</li>
+      <li>2 tbsp. vegetable oil</li>
+      <li>60 g fresh ginger (grated)</li> 
+      <li>3 garlic cloves (crushed)</li>
+      <li>2 tsp. ground cumin</li> 
+      <li>2 tsp. ground coriander</li>
+      <li>1 tsp. ground turmeric</li>
+      <li>2 tsp. chilli powder</li>
+      <li>4 cardamom pods (lightly crushed)</li>
+      <li>4 cloves</li>
+      <li>2 sticks of cinnamon</li>
+      <li>1/2 tsp. sugar</li>
+      <li>1 tsp salt (more to taste)</li>
+      <li>1.5 cups chicken stock</li>
+      <li>200 g tinned tomatoes (crushed)</li>
+      <li>1 tbsp. tomato paste</li>
+      <li>2 potatoes (peeled and cut into chunks)</li>
+    </ul>
 </body>
 
 
