--- a/recipes/malva-pudding.html
+++ b/recipes/malva-pudding.html
@@ -14,6 +14,29 @@
         known around the world in recent years! (If it sounds familiar, you may remember that it was served for
         Christmas dessert in 2006 by Oprah’s personal chef to students at Oprah Winfrey Leadership Academy for Girls!)</p>
     <p>A perfect waay to end a night of South African cuisine, soft and sweet.</p>
+    <h2>Ingredients</h2>
+    <h4>Pudding:</h4>
+    <ul>
+      <li>250 ml Sugar</li>
+      <li>2 Eggs</li>
+      <li>30 ml Apricot Jam</li>
+      <li>30 ml Butter</li>
+      <li>5 ml Vinegar</li>
+      <li>125 ml Milk</li>
+      <li>310 ml Cake Flour</li>
+      <li>5 ml Bicarbonate Soda</li> 
+      <li>1 ml Salt</li> 
+    </ul>
+    <h4>Sauce:</h4>
+    <ul>
+        <li>250 ml Fresh Cream</li>
+        <li>125 ml Butter</li>
+        <li>125ml Brown Sugar</li>
+        <li>125 ml Water</li>
+        <li>5 ml Vanilla Essence</li>
+        <li>30ml Golden Syrup (optional)</li>
+        <li>4 Star Anise (optional)</li>
+    </ul>
 
 </body>
 
