Iteration 3-step 4: added steps heading and recipe steps in an ordered list to all pages.

--- a/recipes/cape-malay-curry.html
+++ b/recipes/cape-malay-curry.html
@@ -16,26 +16,45 @@
     <p>Being so savoury and spicy, it would be a crime not to try out this meal. All you need is:</p>
     <h2>Ingredients</h2>
     <ul>
-      <li>1 kg chicken pieces (mix of thighs & drumsticks, skin on)</li>
-      <li>250 g white onion (sliced)</li>
-      <li>2 tbsp. vegetable oil</li>
-      <li>60 g fresh ginger (grated)</li> 
-      <li>3 garlic cloves (crushed)</li>
-      <li>2 tsp. ground cumin</li> 
-      <li>2 tsp. ground coriander</li>
-      <li>1 tsp. ground turmeric</li>
-      <li>2 tsp. chilli powder</li>
-      <li>4 cardamom pods (lightly crushed)</li>
-      <li>4 cloves</li>
-      <li>2 sticks of cinnamon</li>
-      <li>1/2 tsp. sugar</li>
-      <li>1 tsp salt (more to taste)</li>
-      <li>1.5 cups chicken stock</li>
-      <li>200 g tinned tomatoes (crushed)</li>
-      <li>1 tbsp. tomato paste</li>
-      <li>2 potatoes (peeled and cut into chunks)</li>
+        <li>1 kg chicken pieces (mix of thighs & drumsticks, skin on)</li>
+        <li>250 g white onion (sliced)</li>
+        <li>2 tbsp. vegetable oil</li>
+        <li>60 g fresh ginger (grated)</li>
+        <li>3 garlic cloves (crushed)</li>
+        <li>2 tsp. ground cumin</li>
+        <li>2 tsp. ground coriander</li>
+        <li>1 tsp. ground turmeric</li>
+        <li>2 tsp. chilli powder</li>
+        <li>4 cardamom pods (lightly crushed)</li>
+        <li>4 cloves</li>
+        <li>2 sticks of cinnamon</li>
+        <li>1/2 tsp. sugar</li>
+        <li>1 tsp salt (more to taste)</li>
+        <li>1.5 cups chicken stock</li>
+        <li>200 g tinned tomatoes (crushed)</li>
+        <li>1 tbsp. tomato paste</li>
+        <li>2 potatoes (peeled and cut into chunks)</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a Dutch Oven over medium heat, add the vegetable oil followed by the sliced onions. Fry until they start
+            to turn golden brown. Add the salt and sugar and stir through.</li>
+        <li>Add the grated ginger and when it becomes fragrant, add the chicken pieces.</li>
+        <li>When you have a little colour on the chicken pieces add the garlic and cook for a minute before adding the
+            spices. Stir the spices through until the aromas start to come forward.</li>
+        <li>Add the chicken stock, stir through and cook covered for 40 minutes on a slow bubble. Add extra water if the
+            stock reduces too far (it shouldn't).</li>
+        <li>Add the tomatoes and tomato paste and stir through. Cook uncovered for 30 minutes.</li>
+        <li>Meanwhile boil the potatoes in salted water until cooked through.</li>
+        <li>If the sauce has reduced too far with the curry, add extra water. Check for seasoning. It should be rich and
+            flavourful.</li>
+        <li>At this stage you can serve the curry with the potatoes, but traditionally it is left overnight to deepen
+            the flavour of the curry. Either way, add the potatoes to the curry and gently stir.</li>
+        <li>If eating the next day, allow the curry to cool a little before transferring to the fridge.</li>
+        <li>Reheat the next day and serve with Cape Malay yellow rice.</li>
+    </ol>
 </body>
+
 
 
 </html>
