--- a/recipes/malva-pudding.html
+++ b/recipes/malva-pudding.html
@@ -12,20 +12,21 @@
     <h2>Description</h2>
     <p>Malva Pudding Cake is super popular in South Africa, and thankfully this delicious treat has become more well
         known around the world in recent years! (If it sounds familiar, you may remember that it was served for
-        Christmas dessert in 2006 by Oprah’s personal chef to students at Oprah Winfrey Leadership Academy for Girls!)</p>
+        Christmas dessert in 2006 by Oprah’s personal chef to students at Oprah Winfrey Leadership Academy for Girls!)
+    </p>
     <p>A perfect waay to end a night of South African cuisine, soft and sweet.</p>
     <h2>Ingredients</h2>
     <h4>Pudding:</h4>
     <ul>
-      <li>250 ml Sugar</li>
-      <li>2 Eggs</li>
-      <li>30 ml Apricot Jam</li>
-      <li>30 ml Butter</li>
-      <li>5 ml Vinegar</li>
-      <li>125 ml Milk</li>
-      <li>310 ml Cake Flour</li>
-      <li>5 ml Bicarbonate Soda</li> 
-      <li>1 ml Salt</li> 
+        <li>250 ml Sugar</li>
+        <li>2 Eggs</li>
+        <li>30 ml Apricot Jam</li>
+        <li>30 ml Butter</li>
+        <li>5 ml Vinegar</li>
+        <li>125 ml Milk</li>
+        <li>310 ml Cake Flour</li>
+        <li>5 ml Bicarbonate Soda</li>
+        <li>1 ml Salt</li>
     </ul>
     <h4>Sauce:</h4>
     <ul>
@@ -37,8 +38,21 @@
         <li>30ml Golden Syrup (optional)</li>
         <li>4 Star Anise (optional)</li>
     </ul>
-
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat the oven to 180°C.</li>
+        <li>Beat the eggs and sugar until light and fluffy.</li>
+        <li>Beat in the apricot jam.</li>
+        <li>Melt butter in a small pot on medium heat and add the vinegar and milk Sift the flour, bicarb and salt
+            together and add to the creamed mixture alternately with the milk.</li>
+        <li>Pour into a deep round dish or an ovenproof casserole dish that takes about 2 litres.</li>
+        <li>Bake at 180°C for 45 minutes until the top is nicely browned.</li>
+        <li><strong>Sauce:</strong> Bring the butter, cream, sugar and water to the boil and simmer, add star anise, vanilla essence and
+            golden syrup and stirring all the time for 5 minutes.</li>
+        <li>Remove from the stove. Pour over the hot baked pudding.</li>
+        <li><strong>For Brandy Pudding:</strong>strong add 100 ml chopped Mixed Nuts (Walnuts), 100 ml Dates (Stone and Chopped) and 50 ml
+            Glazed Cherries to the batter. Add 100 ml Brandy to the Sauce.</li>
+    </ol>
 </body>
-
 
 </html>
